# HACS-MyCarbonFootprint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  card.yaml  hacs.json  pyproject.toml
.github/workflows/: tests.yml.bak
custom_components/my_carbon_footprint/: CarbonFootprintCoordinator.py  __init__.py  config_flow.py  const.py  manifest.json  models.py  sensor.py  services.yaml
custom_components/my_carbon_footprint/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py
