[project]
name = "ha-my-carbon-footprint"
version = "0.1.0"
authors = [
    {name = "RobinFrcd", email = "your.email@example.com"},
]
description = "Home Assistant integration to calculate carbon footprint based on energy consumption"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "colorlog",
    "homeassistant==2025.4.0",
    "pytest-homeassistant-custom-component",
    "voluptuous-stubs==0.1.1",
    "ruff>=0.9",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-aiohttp>=1.0.5",
    "coverage>=7.6.0",
    "pytest-cov>=5.0.0",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/HACS-MyCarbonFootprint"
"Bug Tracker" = "https://github.com/yourusername/HACS-MyCarbonFootprint/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]